# incucyte-data-analysis

./: README.md  environment.yml  pyproject.toml
hcs_analysis/: __init__.py  aggregate.py  cellprofiler.py  filter.py  load.py  plate.py
incucyte/: __init__.py  aggregate.py  classify.py  filter.py  load.py  operetta.py  plot.py  stats.py
notebooks/templates/: cellprofiler_morphology.ipynb  endpoint_qupath.ipynb  timeseries_qupath.ipynb  timeseries_qupath_classified.ipynb  timeseries_qupath_multiplate.ipynb
